[package]
name = "blocknative-flows"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Block Native extension for flows.network"
documentation = "https://docs.rs/blocknative-flows"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[package.metadata.docs.rs]
default-target = "wasm32-wasi"

[dependencies]
http_req_wasi = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2"
